--- a/Birlik_Mobile/Components/Layout/NavMenu.razor
+++ b/Birlik_Mobile/Components/Layout/NavMenu.razor
@@ -1,5 +1,7 @@
 ﻿@inject Birlik_Mobile.Services.AuthService AuthService
 @inject NavigationManager NavManager
+@using Birlik_Mobile.Components.Layout
+
 
 <!-- Menú lateral moderno -->
 <div class="nav-menu @(IsOpen ? "open" : "")">
