--- a/Birlik_Mobile/Components/_Imports.razor
+++ b/Birlik_Mobile/Components/_Imports.razor
@@ -1,9 +1,9 @@
-﻿@using System.Net.Http
-@using System.Net.Http.Json
-@using Microsoft.AspNetCore.Components.Forms
+﻿@using Microsoft.AspNetCore.Components
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
-@using Microsoft.AspNetCore.Components.Web.Virtualization
-@using Microsoft.JSInterop
+@using Microsoft.AspNetCore.Components.WebView.Maui
 @using Birlik_Mobile
 @using Birlik_Mobile.Components
+@using Birlik_Mobile.Components.Layout
+@using Birlik_Mobile.Components.Pages
+@using Birlik_Mobile.Services
