--- a/Birlik_Mobile/MainPage.xaml
+++ b/Birlik_Mobile/MainPage.xaml
@@ -1,14 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+﻿<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:Birlik_Mobile"
-             xmlns:components="clr-namespace:Birlik_Mobile.Components"
+             xmlns:pages="clr-namespace:Birlik_Mobile.Components.Pages"
              x:Class="Birlik_Mobile.MainPage">
 
     <BlazorWebView x:Name="blazorWebView" HostPage="wwwroot/index.html">
         <BlazorWebView.RootComponents>
-            <RootComponent Selector="#app" ComponentType="{x:Type components:Routes}" />
+            <RootComponent Selector="#app"
+                           ComponentType="{x:Type pages:App}" />
         </BlazorWebView.RootComponents>
     </BlazorWebView>
-
 </ContentPage>
