--- a/Birlik_Mobile/MainPage.xaml
+++ b/Birlik_Mobile/MainPage.xaml
@@ -1,12 +1,11 @@
 ﻿<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:pages="clr-namespace:Birlik_Mobile.Components.Pages"
+             xmlns:local="clr-namespace:Birlik_Mobile.Components.Pages"
              x:Class="Birlik_Mobile.MainPage">
 
     <BlazorWebView x:Name="blazorWebView" HostPage="wwwroot/index.html">
         <BlazorWebView.RootComponents>
-            <RootComponent Selector="#app"
-                           ComponentType="{x:Type pages:App}" />
+            <RootComponent Selector="#app" ComponentType="{x:Type local:App}" />
         </BlazorWebView.RootComponents>
     </BlazorWebView>
 </ContentPage>
